k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: advance-trading
  labels:
    component: db
spec:
  selector:
    component: db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
