k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: advance-trading-service
spec:
  selector:
    app: advance-trading
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: frontend
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: backend
  type: LoadBalancer
